<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio_Activity">

    <TextView
        android:id="@+id/tvTituloInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/tvBienvenida"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="false" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/ivLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logonetline" />

    <ImageButton
        android:id="@+id/ibServicio"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/ibIcono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloInicio"
        app:srcCompat="@drawable/iconoservicio"
        android:onClick="irServicios"/>

    <ImageButton
        android:id="@+id/ibDimensionamiento"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/ibIcono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloInicio"
        app:srcCompat="@drawable/iconodimensionamiento"
        android:onClick="irDimension" />

    <ImageButton
        android:id="@+id/ibAlmacen"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="76dp"
        android:contentDescription="@string/ibIcono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/iconoalmacen"
        android:onClick="irAlmacen"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvEquipos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:fontFamily="@font/comic_neue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibEquipos"
        android:onClick="irEquipos"/>

    <ImageButton
        android:id="@+id/ibEquipos"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/ibIcono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/iconoequipos"
        android:onClick="irEquipos"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tvAlmacen"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:fontFamily="@font/comic_neue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibAlmacen" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvNotas"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:fontFamily="@font/comic_neue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibNotas" />

    <ImageButton
        android:id="@+id/ibNotas"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/ibIcono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/icononotas"
        android:onClick="irNotas"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvServicios"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:fontFamily="@font/comic_neue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibServicio" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/tvDimensionamientos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:fontFamily="@font/comic_neue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibDimensionamiento" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>