<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dimensionamiento_Activity">

    <TextView
        android:id="@+id/tvTituloDimen"
        android:layout_width="353dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tvDimensionamientos"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAgregarDimen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="agregarDimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/botonagregar" />

    <TableLayout
        android:id="@+id/tlRegistrosDimen"
        android:layout_width="389dp"
        android:layout_height="595dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDimen">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tvCodigoDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCodigo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFechaDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFecha"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvClienteDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCliente"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvEmpleadoDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEmpleado"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvEditarDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEditar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tvDatoCodigoDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvDatoFechaDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvDatoClienteDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvDatoEmpleadoDimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageButton
                android:id="@+id/ibEditarDimen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/editar" />


        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>