<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Equipos_Activity">

    <TextView
        android:id="@+id/tvTituloEqui"
        android:layout_width="364dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tvEquipos"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAgregarEqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="agregarEquipo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/botonagregar" />

    <TableLayout
        android:id="@+id/tlRegistrosEqui"
        android:layout_width="389dp"
        android:layout_height="595dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloEqui">



        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tvCodigoEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCodigo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFechaEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvFecha"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvClienteEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvCliente"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />



            <TextView
                android:id="@+id/tvEstatusEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEstatus"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvEditarEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEditar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tvDatoCodigoEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvDatoFechaEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvDatoClienteEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />


            <TextView
                android:id="@+id/tvDatoEstatusEqui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <ImageButton
                android:id="@+id/ibEditarEqui"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/editar" />


        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>