<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Servicios_Activity">

    <TextView
        android:id="@+id/tvTituloServ"
        android:layout_width="353dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tvServicios"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAgregarServ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="agregarServ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/botonagregar" />

    <TableLayout
        android:id="@+id/tlRegistrosServ"
        android:layout_width="389dp"
        android:layout_height="595dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloServ">



            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                    <TextView
                        android:id="@+id/tvCodigoServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCodigo"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvFechaServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvFecha"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvClienteServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCliente"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvEmpleadoServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvEmpleado"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvEstatusServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvEstatus"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvEditarServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvEditar"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                    <TextView
                        android:id="@+id/tvDatoCodigoServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/tvDatoFechaServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/tvDatoClienteServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/tvDatoEmpleadoServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/tvDatoEstatusServ"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <ImageButton
                        android:id="@+id/ibEditarServ"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:srcCompat="@drawable/editar" />

            </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>