<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notas_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/tvTituloNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/tvNotas"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/etNotas"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:autofillHints=""
            android:ems="10"
            android:layout_marginTop="10dp"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tvTituloPendientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/tvPendientes"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/etPendientes"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnGuardarNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btnGuardar"
            android:onClick="Guardar"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>